[package]
name = "cts-license"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ring.workspace = true
rsa.workspace = true
rand.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
chrono.workspace = true
hex.workspace = true
log.workspace = true
clap = {workspace = true, features = ["derive"]}
