[package]
name = "cts-pgrow"
version = "0.1.1"
authors.workspace = true
homepage.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono = {workspace = true, optional = true}
serde_json.workspace = true
sqlx = {workspace = true, features = ["postgres"]}
serde = { workspace = true, features = ["derive"] }

[features]
default = ["chrono"]

chrono = ["dep:chrono","sqlx/chrono"]
uuid = ["sqlx/uuid"]
decimal = ["sqlx/rust_decimal"]