[package]
name = "cts-sql-expression"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = {workspace = true, features = ["runtime-tokio-rustls", "postgres"]}
cts-pgrow.workspace = true
uuid = { workspace = true , features = ["v4"]}
