[package]
name = "cts-upload"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
axum = { workspace = true }
aliyun-oss-rust-sdk.workspace = true
uuid = { workspace = true, optional = true }
chrono.workspace = true
tokio.workspace = true

[features]
 default = ["multipart","writer","reader"]
multipart = ["axum/multipart"]
writer = ["dep:uuid", "uuid/v4"]
reader = ["dep:uuid", "uuid/v4"]
