[package]
name = "response_utils"
version = "0.1.1"
authors.workspace = true
homepage.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
http.workspace = true
axum.workspace = true
mime.workspace = true
